// DBML (Database Markup Language) cho Hệ Thống Hotel Booking
// Sắp xếp cân bằng 4 cột đồng đều, tối ưu diện tích hiển thị (Loại bỏ khoảng trống thừa)

// =====================================================
// 1. USERS & AUTHENTICATION (CỘT 1)
// =====================================================

Table user_accounts {
  id int [pk, increment]
  email nvarchar(255) [not null, unique]
  username nvarchar(255) [not null, unique]
  password nvarchar(255) [not null]
  role nvarchar(50) [not null, note: "CUSTOMER, HOTEL_OWNER, ADMIN"]
  enabled bit [not null, default: 1]
  otp nvarchar(255)
  otp_expiry datetime2
  otp_type nvarchar(50) [note: "REGISTER, FORGOT_PASSWORD, LOGIN, UPDATE_PROFILE"]
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table admins {
  id int [pk, increment]
  user_account_id int [not null, unique]
  full_name nvarchar(255) [not null]
  phone nvarchar(20)
}

Table customers {
  id int [pk, increment]
  user_account_id int [not null, unique]
  full_name nvarchar(255) [not null]
  phone nvarchar(20)
  address nvarchar(500)
  city nvarchar(100)
  country nvarchar(100)
  date_of_birth date
  gender nvarchar(10) [note: "MALE, FEMALE, OTHER"]
}

Table hotel_owners {
  id int [pk, increment]
  user_account_id int [not null, unique]
  full_name nvarchar(255) [not null]
  phone nvarchar(20)
  address nvarchar(500)
  id_card nvarchar(20)
  tax_id nvarchar(20)
  verification_status nvarchar(50) [note: "PENDING, APPROVED, REJECTED"]
  verified_at datetime2
  rejection_reason nvarchar(max)
  id_card_document nvarchar(500)
  bank_name nvarchar(255)
  bank_account_number nvarchar(50)
  bank_account_holder nvarchar(255)
}

Table banners {
  id int [pk, increment, note: "Unique identifier for the banner"]
  image_url nvarchar(500) [not null, note: "URL path of the banner image"]
  link_url nvarchar(500) [note: "Target URL destination when clicked"]
  title nvarchar(255) [note: "Title or caption of the banner"]
  active bit [not null, default: 1, note: "Display status (1: Active, 0: Inactive)"]

  Note: 'Stores promotional banners and slider images displayed on the homepage, managed by system admins.'
}

// =====================================================
// 2. HOTEL MANAGEMENT (CỘT 2)
// =====================================================

Table hotel {
  id int [pk, increment]
  owner_id int [not null]
  name nvarchar(255) [not null]
  address nvarchar(255) [not null]
  city nvarchar(100)
  district nvarchar(100)
  image_url nvarchar(500)
  description nvarchar(max)
  rating decimal(2,1) [not null, default: 0]
  total_feedbacks int [not null, default: 0]
  approval_status nvarchar(50) [note: "PENDING, APPROVED, REJECTED"]
  active bit [not null, default: 1]
  approved_at datetime2
  rejection_reason nvarchar(max)
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table hotel_verification_documents {
  id int [pk, increment]
  hotel_id int [not null, unique]
  phone nvarchar(20)
  email nvarchar(255)
  business_registration_doc nvarchar(500)
  land_certificate_doc nvarchar(500)
  rental_contract_doc nvarchar(500)
  upload_status nvarchar(50) [note: "PENDING, APPROVED, REJECTED"]
  rejection_reason nvarchar(max)
  verified_at datetime2
  created_at datetime2 [not null, default: `now()`]
}

Table hotel_facilities {
  id int [pk, increment]
  hotel_id int [not null, unique]
  parking bit [not null, default: 0]
  restaurant bit [not null, default: 0]
  breakfast_available bit [not null, default: 0]
  fitness_centre bit [not null, default: 0]
  non_smoking_rooms bit [not null, default: 0]
  airport_shuttle bit [not null, default: 0]
  spa_wellness_centre bit [not null, default: 0]
  free_wifi bit [not null, default: 0]
  ev_charging_station bit [not null, default: 0]
  wheelchair_accessible bit [not null, default: 0]
  swimming_pool bit [not null, default: 0]
  bar_pub bit [not null, default: 0]
}

Table hotel_views {
  id int [pk, increment]
  hotel_id int [not null, unique]
  city_view bit [not null, default: 0]
  beach_view bit [not null, default: 0]
  garden_view bit [not null, default: 0]
  pool_view bit [not null, default: 0]
  river_view bit [not null, default: 0]
  mountain_view bit [not null, default: 0]
}

// =====================================================
// 3. ROOM & PROMOTIONS (CỘT 3)
// =====================================================

Table promotions {
  id int [pk, increment]
  hotel_id int [not null]
  title nvarchar(255)
  description nvarchar(max)
  discount_percent decimal(5,2)
  start_date date
  end_date date
  status nvarchar(50) [note: "ACTIVE, INACTIVE, EXPIRED"]
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table room {
  id int [pk, increment]
  hotel_id int [not null]
  room_type nvarchar(255)
  number_rooms int
  description nvarchar(max)
  price decimal(38,2)
  acreage float
  bed int
  person int
  num_window int
  img_url nvarchar(500)
  room_status bit
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table room_facilities {
  id int [pk, increment]
  room_id int [not null, unique]
  free_toiletries bit [not null, default: 0]
  shower bit [not null, default: 0]
  bathrobe bit [not null, default: 0]
  toilet bit [not null, default: 0]
  towels bit [not null, default: 0]
  slippers bit [not null, default: 0]
  hairdryer bit [not null, default: 0]
  toilet_paper bit [not null, default: 0]
  air_conditioning bit [not null, default: 0]
  safety_deposit_box bit [not null, default: 0]
  desk bit [not null, default: 0]
  television bit [not null, default: 0]
  telephone bit [not null, default: 0]
  iron bit [not null, default: 0]
  electric_kettle bit [not null, default: 0]
  cable_channels bit [not null, default: 0]
  wake_up_service bit [not null, default: 0]
  wardrobe_closet bit [not null, default: 0]
  clothes_rack bit [not null, default: 0]
  free_bottled_water int [not null, default: 0]
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table wishlists {
  id int [pk, increment]
  customer_id int [not null]
  room_id int [not null]
  check_in_date date
  check_out_date date
  added_at datetime2 [not null, default: `now()`]
}

// =====================================================
// 4. BOOKING, PAYMENT, FEEDBACK & MESSAGES (CỘT 4)
// =====================================================

Table bookings {
  id int [pk, increment]
  customer_id int [not null]
  room_id int [not null]
  hotel_id int [not null]
  phone nvarchar(20)
  full_name nvarchar(255)
  email nvarchar(255)
  id_promotion int
  check_in_date date
  check_out_date date
  num_nights int
  total_price decimal(38,2)
  status nvarchar(50) [note: "PENDING, CONFIRMED, COMPLETED, CANCELLED, REJECTED, EXPIRED"]
  special_notes nvarchar(max)
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2
  quantity int [not null, default: 1]
  checked_in_at datetime2
  checked_out_at datetime2
  platform_fee_percent decimal(5,2)
  platform_fee_amount decimal(38,2)
  owner_payout_amount decimal(38,2)
  payout_status nvarchar(50) [note: "PENDING, PAID"]
  payout_at datetime2
  payout_bank_name nvarchar(255)
  payout_bank_account_number nvarchar(50)
  payout_bank_account_holder nvarchar(255)
}

Table payments {
  id int [pk, increment]
  booking_id int [not null]
  amount decimal(38,2)
  method nvarchar(50) [note: "QR_CODE, CASH, BANK_TRANSFER, MOMO, VNPAY, PAYPAL"]
  status nvarchar(50) [note: "PENDING, PAID, FAILED, EXPIRED, REFUNDED"]
  qr_code_url nvarchar(500)
  transaction_id nvarchar(255)
  paid_at datetime2
  created_at datetime2 [not null, default: `now()`]
  qr_expires_at datetime2
}

Table refunds {
  id int [pk, increment]
  booking_id int [not null, unique]
  bank_name nvarchar(255)
  account_number nvarchar(50)
  account_holder nvarchar(255)
  refund_amount decimal(38,2) [not null]
  status nvarchar(50) [not null, default: "PENDING", note: "PENDING, PROCESSED, REJECTED"]
  note nvarchar(max)
  cancellation_reason nvarchar(1000)
  requested_at datetime2 [not null, default: `now()`]
  processed_at datetime2
}

Table messages {
  id int [pk, increment]
  sender_id int [not null]
  receiver_id int [not null]
  booking_id int
  hotel_id int [not null]
  content nvarchar(max)
  is_read bit [not null, default: 0]
  sent_at datetime2 [not null, default: `now()`]
}

Table feedback {
  id int [pk, increment]
  customer_id int [not null]
  hotel_id int [not null]
  room_id int [not null]
  user_full_name nvarchar(255)
  room_type nvarchar(255)
  comment nvarchar(1000)
  rating int
  upvote int [not null, default: 0]
  downvote int [not null, default: 0]
  status nvarchar(50) [note: "VISIBLE, HIDDEN, PENDING"]
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table feedback_replies {
  id int [pk, increment]
  feedback_id int [not null]
  owner_id int [not null]
  hotel_id int [not null]
  content nvarchar(1000)
  created_at datetime2 [not null, default: `now()`]
  updated_at datetime2 [not null, default: `now()`]
}

Table feedback_votes {
  id int [pk, increment]
  feedback_id int [not null]
  customer_id int [not null]
  vote_type nvarchar(10) [not null, note: "UPVOTE, DOWNVOTE"]
  created_at datetime2 [not null, default: `now()`]
}

// =====================================================
// TABLE GROUPS (Gom cố định 4 Cột cân đối diện tích)
// =====================================================

TableGroup Cot_1_Users {
  user_accounts
  admins
  customers
  hotel_owners
  banners
}

TableGroup Cot_2_Hotel {
  hotel
  hotel_verification_documents
  hotel_facilities
  hotel_views
}

TableGroup Cot_3_Room {
  promotions
  room
  room_facilities
  wishlists
}

TableGroup Cot_4_Booking_Feedback {
  bookings
  payments
  refunds
  messages
  feedback
  feedback_replies
  feedback_votes
}

// =====================================================
// FOREIGN KEY RELATIONSHIPS
// =====================================================

Ref: admins.user_account_id - user_accounts.id
Ref: customers.user_account_id - user_accounts.id
Ref: hotel_owners.user_account_id - user_accounts.id

Ref: hotel.owner_id > hotel_owners.id
Ref: hotel_verification_documents.hotel_id - hotel.id
Ref: hotel_facilities.hotel_id - hotel.id
Ref: hotel_views.hotel_id - hotel.id
Ref: promotions.hotel_id > hotel.id
Ref: room.hotel_id > hotel.id

Ref: room_facilities.room_id - room.id

Ref: bookings.customer_id > customers.id
Ref: bookings.room_id > room.id
Ref: bookings.hotel_id > hotel.id
Ref: bookings.id_promotion > promotions.id

Ref: payments.booking_id > bookings.id
Ref: refunds.booking_id - bookings.id

Ref: wishlists.customer_id > customers.id
Ref: wishlists.room_id > room.id

Ref: messages.sender_id > user_accounts.id
Ref: messages.receiver_id > user_accounts.id
Ref: messages.booking_id > bookings.id
Ref: messages.hotel_id > hotel.id

Ref: feedback.customer_id > customers.id
Ref: feedback.hotel_id > hotel.id
Ref: feedback.room_id > room.id

Ref: feedback_replies.feedback_id > feedback.id
Ref: feedback_replies.owner_id > hotel_owners.id
Ref: feedback_replies.hotel_id > hotel.id

Ref: feedback_votes.feedback_id > feedback.id
Ref: feedback_votes.customer_id > customers.id
